--- a/_config.yml
+++ b/_config.yml
@@ -81,12 +81,12 @@ analytics:
 # Site Author
 author:
   name             : "Siyuan Chen"
-  avatar           : "profile.png"
+  avatar           : "photo.jpg"
   bio              : "CS undergrad. at Peking University"
   location         : "Beijing, China"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : ""
+  googlescholar    : 
   email            :  "chensiyuan@pku.edu.cn"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
