--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "CS undergrad. at Peking University"
   location         : "Beijing, China"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   googlescholar    : 
   email            :  "chensiyuan@pku.edu.cn"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
