--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 locale                   : "en-US"
 title                    : "Siyuan Chen (陈思元)'s Homepage"
-title_separator          : "|"
+title_separator          : "-"
 name                     : &name "Siyuan Chen"
 description              : &description ""
 url                      : https://gulang2019.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
