--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Siyuan Chen (陈思元)'s Homepage"
+title                    : "Siyuan Chen's Homepage"
 title_separator          : "-"
-name                     : &name "Siyuan Chen"
-description              : &description "Siyuan Chen (陈思元)'s Homepage"
+name                     : &name "Siyuan Chen (陈思元)"
+description              : &description "Siyuan Chen's Homepage"
 url                      : https://gulang2019.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "gulang2019/gulang2019.github.io"
