--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Siyuan Chen"
+  name             : "Siyuan Chen (陈思元)"
   avatar           : "photo.jpg"
   bio              : "CS undergrad. at Peking University"
   location         : "Beijing, China"
