--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
   #   url: /portfolio/
         
   - title: "CV"
-    url: /files/CV_siyuan.pdf
+    url: /files/CV.pdf
     
   - title: "Blog"
     url: /year-archive/
