--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
-  - title: "CV"
-    url: /files/CV.pdf
+  - title: "CV (2024.2)"
+    url: /files/CV_Siyuan.pdf
     
   # - title: "Blog"
   #   url: /year-archive/
