--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
-  - title: "CV (2024.2)"
+  - title: "CV(2/24)"
     url: /files/CV_Siyuan.pdf
     
   # - title: "Blog"
