--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
-  - title: "CV"
+  - title: "CV (May 2025)"
     url: /files/CV.pdf
     
   # - title: "Blog"
